# Soliton-Symmetry

axial symmetry/: contour_plots.py  dm_density.py  ring.py  rk4.c  space.c  space.h
new approach/: CMakeLists.txt  axialSym.h  axial_sym.c  contour_plots.py  dm_density.py  functions.c  ring.py  rk4.c  trans.sh  transport.sh
new approach/python/: angle-center-plots.py  contour_plots.py  dm_density.py  mz_integral_plot.py  ring.py
new approach/src/: axialSym.h  axial_sym.c  functions.c  rk4.c  rk4.h
plane symmetry/: diag.py  plane.c  rk4.c  rk4.h
